Large refactor replacing re-frame for dumdom and herb